fixed job cards too small

--- a/jobPortal/src/main/resources/org/example/jobportal/application.css
+++ b/jobPortal/src/main/resources/org/example/jobportal/application.css
@@ -22,7 +22,12 @@
     -fx-border-insets: 5px;
     -fx-background-insets: 5px;
 }
-
+.cardContainer{
+    -fx-fill-width: always;
+}
+.head{
+    -fx-font-size: 30;
+}
 .scrollPane {
 
 }
